# sail-dataset-upload

./: Makefile  Readme.md  pyproject.toml  requirements.txt  sail_client-0.1.0-py3-none-any.whl  scripts.sh
app/: main.py
app/api/: dataset_upload.py
app/models/: data_model.py
docker/: Dockerfile  Entrypoint.sh  nginx.conf  requirements.txt
